node image resizing issue fixed on mobile

--- a/css/portfolio_style_mobile.css
+++ b/css/portfolio_style_mobile.css
@@ -200,8 +200,7 @@
 	  
 	  width: var(--iconbox_inner_size);
 	  height: var(--iconbox_inner_size);
-	  
-	  
+
   }
   
   .icon-box:hover .icon-img-hover {
@@ -227,6 +226,7 @@
 /* Nodes */
 
 .portfolio-node {
+
 	width: auto;
 	height: auto;
 
@@ -264,10 +264,11 @@
 }
 
 .node-img {
+
 	position: relative;
 	left: calc(var(--node_padding) * -1);
 	top:  calc(var(--node_padding) * -1);
-	width: 125%;
+	width: calc(100% + (var(--node_padding)*2));
 	height: 25vh;
 	object-fit: cover;
 	filter: grayscale(70%);
@@ -283,6 +284,7 @@
 }
 
 .node-name {
+
 	font-size: calc(var(--font_size) * 1.4);
 	color: var(--secondary);
 	margin-top: 0.5vh;
@@ -292,11 +294,13 @@
 }
 
 .node-description{
+
 	font-size: var(--font_size);
 	color: var(--text);
 	text-decoration: none;
 	margin-top: 2vh;
 	margin-bottom: 0.2vh;
+
 }
 
 .node-tag-box {
@@ -306,6 +310,7 @@
 	flex-wrap: wrap;
 	flex-direction: row;
 	align-items: start;
+
 }
 
 .node-tag {
@@ -326,4 +331,5 @@
 	border-radius: 2em;
 
 	color: var(--highlight);
+	
 }
